Fixing overflow issues and Social Icons

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -82,6 +82,7 @@
       background: url(../img/elie.JPG);
       border-radius: 50%;
       border: 3px solid $secondary-color;
+      background-size: cover;
       background-repeat: no-repeat;
     }
   }
